src/test/test-models/bad/row_vector_expr_bad3.stan
transformed data {
  row_vector[2] X = [ ];
}
model {
}
